--- a/portfolio.html
+++ b/portfolio.html
@@ -78,10 +78,17 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port-1_1x.jpg 450w, ./image/portfolio/port-1_2x.jpg 900w"
-                                  src="./image/portfolio/port-1_1x.jpg"
-                                  alt="Веб-сайт Технокряк"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                              <picture>
+                                <source srcset="./image/portfolio/port-1_mob_1x.jpg 1x, ./image/portfolio/port-1_mob_1x.jpg 2x"
+                                  media="(max-width: 480px)">
+                                <source srcset="./image/portfolio/port-1_tab_1x.jpg 1x, ./image/portfolio/port-1_tab_1x.jpg 2x"
+                                  media="(min-width: 481px)">
+                                <source srcset="./image/portfolio/port-1_pc_1x.jpg 1x, ./image/portfolio/port-1_pc_1x.jpg 2x"
+                                  media="(min-width: 769px)">
+                                <img src="./image/portfolio/port-1_mob_1x.jpg" alt="Веб-сайт Технокряк"
+                                width="450" height="294">
+                              </picture>
+                                
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
                                         сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -97,13 +104,19 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port-2_1x.jpg 450w, ./image/portfolio/port-2_2x.jpg 900w"
-                                  src="./image/portfolio/port-2_1x.jpg" alt="Дизайн постера"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                              <picture>
+                                <source srcset="./image/portfolio/port-2_mob_1x.jpg 1x, ./image/portfolio/port-2_mob_1x.jpg 2x"
+                                  media="(max-width: 480px)">
+                                <source srcset="./image/portfolio/port-2_tab_1x.jpg 1x, ./image/portfolio/port-2_tab_1x.jpg 2x"
+                                  media="(min-width: 481px)">
+                                <source srcset="./image/portfolio/port-2_pc_1x.jpg 1x, ./image/portfolio/port-2_pc_1x.jpg 2x"
+                                  media="(min-width: 769px)">
+                                <img src="./image/portfolio/port-2_mob_1x.jpg" alt="Постер New Orlean vs Golden Star" width="450" height="294">
+                                
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
-                            </div>                            
+                            </div>
                             <div class="service__card">
                                 <h2 class="service__title">Постер New Orlean vs Golden Star</h2>
                                 <p class="service__description">Дизайн</p>
@@ -114,10 +127,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port-3_1x.jpg 450w, ./image/portfolio/port-3_2x.jpg 900w"
-                                  src="./image/portfolio/port-3_1x.jpg"
-                                  alt="Приложение Seafood"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-3_mob_1x.jpg 1x, ./image/portfolio/port-3_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-3_tab_1x.jpg 1x, ./image/portfolio/port-3_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-3_pc_1x.jpg 1x, ./image/portfolio/port-3_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-3_mob_1x.jpg" alt="Ресторан Seafood" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -132,9 +150,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port-4_1x.jpg 450w, ./image/portfolio/port-4_2x.jpg 900w"
-                                  src="./image/portfolio/port-4_1x.jpg" alt="Проект Prime"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-4_mob_1x.jpg 1x, ./image/portfolio/port-4_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-4_tab_1x.jpg 1x, ./image/portfolio/port-4_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-4_pc_1x.jpg 1x, ./image/portfolio/port-4_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-4_mob_1x.jpg" alt="Проект Prime" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -149,9 +173,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port-5_1x.jpg 450w, ./image/portfolio/port-5_2x.jpg 900w"
-                                  src="./image/portfolio/port-5_1x.jpg" alt="Приложение Boxes"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-5_mob_1x.jpg 1x, ./image/portfolio/port-5_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-5_tab_1x.jpg 1x, ./image/portfolio/port-5_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-5_pc_1x.jpg 1x, ./image/portfolio/port-5_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-5_mob_1x.jpg" alt="Проект Boxes" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -166,10 +196,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port6_1x.jpg 450w, ./image/portfolio/port-6_2x.jpg 900w"
-                                  src="./image/portfolio/port6_1x.jpg"
-                                  alt="Веб-сайт Inspiration has no Borders"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-6_mob_1x.jpg 1x, ./image/portfolio/port-6_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-6_tab_1x.jpg 1x, ./image/portfolio/port-6_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-6_pc_1x.jpg 1x, ./image/portfolio/port-6_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-6_mob_1x.jpg" alt="Inspiration has no Borders" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -184,10 +219,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port7_1x.jpg 450w, ./image/portfolio/port-7_2x.jpg 900w"
-                                  src="./image/portfolio/port7_1x.jpg"
-                                  alt="Дизайн издания Limited Edition"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-7_mob_1x.jpg 1x, ./image/portfolio/port-7_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-7_tab_1x.jpg 1x, ./image/portfolio/port-7_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-7_pc_1x.jpg 1x, ./image/portfolio/port-7_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-7_mob_1x.jpg" alt="Издание Limited Edition" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -202,10 +242,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port8_1x.jpg 450w, ./image/portfolio/port-8_2x.jpg 900w"
-                                  src="./image/portfolio/port8_1x.jpg"
-                                  alt="Проект LAB"
-                                  sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-8_mob_1x.jpg 1x, ./image/portfolio/port-8_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-8_tab_1x.jpg 1x, ./image/portfolio/port-8_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-8_pc_1x.jpg 1x, ./image/portfolio/port-8_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-8_mob_1x.jpg" alt="Проект LAB" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
@@ -220,10 +265,15 @@
                     <li class="card-set__item service__item">
                         <a class="link service__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
                             <div class="service__thumb">
-                                <img srcset="./image/portfolio/port-9_1x.jpg 450w, ./image/portfolio/port-9_2x.jpg 900w"
-                                src="./image/portfolio/port-9_1x.jpg"
-                                alt="Приложениее Growing Business"
-                                sizes="(min-width: 769px) 30vw, (min-width: 481px) 50vw, (max-width: 480px) 100vw">
+                                <picture>
+                                  <source srcset="./image/portfolio/port-9_mob_1x.jpg 1x, ./image/portfolio/port-9_mob_1x.jpg 2x"
+                                    media="(max-width: 480px)">
+                                  <source srcset="./image/portfolio/port-9_tab_1x.jpg 1x, ./image/portfolio/port-9_tab_1x.jpg 2x"
+                                    media="(min-width: 481px)">
+                                  <source srcset="./image/portfolio/port-9_pc_1x.jpg 1x, ./image/portfolio/port-9_pc_1x.jpg 2x"
+                                    media="(min-width: 769px)">
+                                  <img src="./image/portfolio/port-9_mob_1x.jpg" alt="Growing Business" width="450" height="294">
+
                                 <div class="service__wrap">
                                     <p class="service__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
